<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <group
      android:id="@+id/upper"
      android:checkableBehavior="single">
    <item
        android:id="@+id/nav_add_to_stock"
        android:icon="@drawable/ic_baseline_add_to_stock_24"
        android:title="@string/menu_add_to_stock" />
    <item
        android:id="@+id/nav_remove_from_stock"
        android:icon="@drawable/ic_baseline_remove_from_stock_24"
        android:title="@string/remove_from_stock" />
  </group>
  <group
      android:id="@+id/middle"
      android:checkableBehavior="single">
    <item
        android:id="@+id/nav_view_product_stock"
        android:icon="@drawable/ic_baseline_view_stock_24"
        android:title="@string/menu_view_stock" />
    <item
        android:id="@+id/nav_view_stock"
        android:icon="@drawable/ic_baseline_full_list_24"
        android:title="@string/view_stock" />
  </group>

    <item
        android:id="@+id/nav_reset"
        android:icon="@drawable/ic_baseline_reset_24"
        android:title="@string/reset" />


</menu>