<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.RemoveFromStockFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <EditText
        android:id="@+id/idEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="150dp"
        android:fontFamily="monospace"
        android:hint="@string/product_id"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:paddingRight="10dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:fontFamily="monospace"
          android:paddingLeft="20dp"
          android:paddingTop="10dp"
          android:text="Existing Stocks: "
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/existingStock"
          android:layout_width="80dp"
          android:layout_height="match_parent"
          android:fontFamily="monospace"
          android:gravity="center_horizontal"
          android:paddingTop="10dp"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textStyle="bold" />

      <Button
          android:id="@+id/existingStockCheckBtn"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:backgroundTint="@color/black"
          android:fontFamily="monospace"
          android:text="OK"
          android:textColor="@color/white"
          android:textSize="15sp" />


    </LinearLayout>

    <EditText
        android:id="@+id/unitsToRemove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="monospace"
        android:hint="@string/number_of_units_to_remove"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/removeStockBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/black"
        android:fontFamily="monospace"
        android:text="@string/remove_stock"
        android:textColor="@color/white"
        android:textSize="20sp" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>